--- a/index.html
+++ b/index.html
@@ -16,11 +16,44 @@
       <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-      <header>
-        <h1>Code Journal</h1>
+      <header class="relative">
+        <h1 class="center-align">Code Journal</h1>
       </header>
       <main>
-        <div data-view="edit-profile"></div>
+
+        <div data-view="edit-profile">
+
+          <form class="flex-center" action="" method="GET" id="userForm">
+
+            <div class="form-container">
+              <div class="col-full margin-twenty">
+                <h1 class="header">Edit Profile</h1>
+              </div>
+             <div class="col-half">
+                <img src="./images/placeholder-image-square.jpg" alt="placeholder image">
+              </div>
+              <div class="col-half flex-column">
+                <label for="url" class="form-label">Avatar URL</label>
+                <input type="url" name="url" id="url" required>
+                <label for="username" class="form-label">Username</label>
+                <input type="username" name="username" id="username" minlength="6" maxlength="18" required>
+                <label for="full-name" class="form-label">Full Name</label>
+                <input type="text" name="full-name" id="fullName" required>
+                <label for="location" class="form-label">Location</label>
+                <input type="text" name="location" id="location" required>
+              </div>
+
+              <div class="col-full margin-twenty">
+               <label for="bio" class="form-label">Bio</label>
+                <textarea class="full-wide" name="bio" id="bio" cols="10" rows="5"></textarea>
+              </div>
+              <div class="col-full align-end margin-twenty">
+                <button class="submit">Save</button>
+              </div>
+            </div>
+          </form>
+        </div>
+
       </main>
       <script src="js/data.js"></script>
       <script src="js/main.js"></script>
