working towards the end

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1 class="header">Edit Profile</h1>
               </div>
              <div class="col-half">
-                <img src="./images/placeholder-image-square.jpg" alt="placeholder image">
+                <img id="placeholder" src="./images/placeholder-image-square.jpg" alt="profile picture">
               </div>
               <div class="col-half flex-column">
                 <label for="url" class="form-label">Avatar URL</label>
