working on example profile next

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 class="center-align">Code Journal</h1>
       </header>
       <main>
-        <div data-view="edit-profile">
+        <div id="editProfile" data-view="edit-profile" class="hidden">
           <form class="flex-center" action="" method="GET" id="userForm">
             <div class="container">
               <div class="col-full margin-twenty">
