swapping check complete - moving onto other swapping items

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <h1 class="center-align">Code Journal</h1>
       </header>
       <main>
-        <div id="editProfile" data-view="edit-profile" class="hidden">
+
+
+        <div id="edit-profile" data-view="edit-profile" class="hidden">
           <form class="flex-center" action="" method="GET" id="userForm">
             <div class="container">
               <div class="col-full margin-twenty">
@@ -49,6 +51,41 @@
             </div>
           </form>
         </div>
+
+
+        <div data-view="profile" id="profile">
+          <div class="flex-center">
+            <div class="container">
+              <div class="col-full">
+                <h1 id="userHeader" class="header">Example User</h1>
+              </div>
+              <div class="col-half">
+                <img  src="./images/placeholder-image-square.jpg" alt="User Profile Photo" class="full-width" id="userPhoto">
+              </div>
+              <div class="col-half flex-column">
+                <div class="side-by-side margin-auto">
+                  <img class="icon margin-660 margin-five" src="./images/user-icon.svg" alt="User Icon">
+                  <h2 class="profile-heading align-self-center" id="userSmall">Example User</h2>
+                </div>
+                <div class="side-by-side margin-auto">
+                <img class="icon margin-twenty margin-660 margin-five" src="./images/location-icon.svg" alt="User Location Icone">
+                <h2 id="userLocation" class="profile-heading align-self-center">Example, Location</h2>
+                </div>
+                <div class="margin-auto">
+                  <p id="profileBio"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. At omnis, ratione sequi cumque magnam eaque totam. Voluptate, consectetur. Deserunt, repudiandae?</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+
+
+
       </main>
       <script src="js/data.js"></script>
       <script src="js/main.js"></script>
