--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <h1 class="center-align">Code Journal</h1>
       </header>
       <main>
-
-
         <div id="edit-profile" data-view="edit-profile" class="hidden">
           <form class="flex-center" action="" method="GET" id="userForm">
             <div class="container">
@@ -51,13 +49,13 @@
             </div>
           </form>
         </div>
-
-
         <div data-view="profile" id="profile">
           <div class="flex-center">
             <div class="container">
               <div class="col-full">
-                <h1 id="userHeader" class="header">Example User</h1>
+                <h1 id="userHeader" class="header">
+
+                </h1>
               </div>
               <div class="col-half">
                 <img  src="./images/placeholder-image-square.jpg" alt="User Profile Photo" class="full-width" id="userPhoto">
@@ -65,27 +63,25 @@
               <div class="col-half flex-column">
                 <div class="side-by-side margin-auto">
                   <img class="icon margin-660 margin-five" src="./images/user-icon.svg" alt="User Icon">
-                  <h2 class="profile-heading align-self-center" id="userSmall">Example User</h2>
+                  <h2 class="profile-heading align-self-center" id="userSmall">
+
+                  </h2>
                 </div>
                 <div class="side-by-side margin-auto">
                 <img class="icon margin-twenty margin-660 margin-five" src="./images/location-icon.svg" alt="User Location Icone">
-                <h2 id="userLocation" class="profile-heading align-self-center">Example, Location</h2>
+                <h2 id="userLocation" class="profile-heading align-self-center">
+
+                </h2>
                 </div>
                 <div class="margin-auto">
-                  <p id="profileBio"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. At omnis, ratione sequi cumque magnam eaque totam. Voluptate, consectetur. Deserunt, repudiandae?</p>
+                  <p id="profileBio">
+
+                 </p>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
-
-
-
-
-
-
-
       </main>
       <script src="js/data.js"></script>
       <script src="js/main.js"></script>
