links added - testing functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </head>
     <body>
       <header class="relative">
-        <h1 class="center-align">Code Journal</h1>
+        <div class="center-align">
+        <h1 class="inline-block">Code Journal</h1>
+        <h1 class="inline-block button"> <a id="edit-profile" data-view="edit-profile" class="" href="#">Profile</a></h1>
+        <h1 class="inline-block button"> <a id="profile" data-view="profile" class="" href="#">Edit Profile</a></h1>
+        </div>
       </header>
       <main>
 
