all coding done time to debug and remove excess css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <header class="relative">
         <div class="center-align">
         <h1 class="inline-block">Code Journal</h1>
-        <h1 class="inline-block button"> <a id="edit-profile" data-view="edit-profile" class="" href="#">Profile</a></h1>
-        <h1 class="inline-block button"> <a id="profile" data-view="profile" class="" href="#">Edit Profile</a></h1>
+        <h1 class="inline-block button"> <a data-view="edit-profile" class="" href="#">Edit Profile</a></h1>
+        <h1 class="inline-block button"> <a id="profileButton" data-view="profile" class="" href="#">Profile</a></h1>
         </div>
       </header>
       <main>
