--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
                 </div>
             </form>
           </div>
+
+
+
+
+
+
+
+
+
         <div class="hidden" data-view="entries" id="entries">
           <div class="flex-container">
             <div class="container">
@@ -122,9 +131,49 @@
                 <h1 class="header align"> Entries</h1>
                 <button class="submit align-self-center" type="newEntry" id="goToEntries">New</button>
               </div>
+              <ul class="flex-column col-full" id="entriesUl">
+                <li class="journal-entry">
+                  <div class="col-half">
+                    <img src="./images/placeholder-image-square.jpg" alt="Journal Entry Photo" class="full-width">
+                  </div>
+                  <div class="col-half flex-column">
+                    <h2 class="profile-heading">
+                      This is the Title of my Journal Entry
+                    </h2>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Beatae eos culpa animi temporibus delectus quidem dolor
+                       possimus voluptatum repellendus libero!
+                    </p>
+                  </div>
+                </li>
+                <li class="journal-entry">
+                  <div class="col-half">
+                    <img src="./images/placeholder-image-square.jpg" alt="Journal Entry Photo" class="full-width">
+                  </div>
+                  <div class="col-half flex-column">
+                    <h2 class="profile-heading">
+                      This is the Title of my Journal Entry
+                    </h2>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Beatae eos culpa animi temporibus delectus quidem dolor
+                      possimus voluptatum repellendus libero!
+                    </p>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
+
+
+
+
+
+
+
+
       </main>
       <script src="js/data.js"></script>
       <script src="js/main.js"></script>
